# pasta

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  inq.kdl
.github/workflows/: check.yml  test.yml  ui.yml
docker/: start.sh
migrations/: 0_init.sql  1_add_user_agent.sql
src/: cleanup.rs  crypto.rs  error.rs  main.rs  util.rs
src/db/: mod.rs
ui/: .prettierrc  README.md  components.json  eslint.config.js  package.json  svelte.config.js
ui/src/lib/: crypto.ts  lang.ts  save.ts  store.ts
ui/src/lib/components/: About.svelte  LinkCreation.svelte  PasswordPrompt.svelte  RedirectPrompt.svelte  SaveSuccess.svelte
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/dialog/: dialog-close.svelte  dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-portal.svelte  dialog-title.svelte  dialog-trigger.svelte
ui/src/lib/components/ui/input/: input.svelte
ui/src/lib/components/ui/select/: select-content.svelte  select-group.svelte  select-item.svelte  select-label.svelte  select-portal.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-trigger.svelte
ui/src/lib/components/ui/sonner/: sonner.svelte
ui/src/lib/components/ui/spinner/: spinner.svelte
ui/src/routes/: +layout.svelte  +page.svelte  layout.css
