[package]
name = "pasta"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.11.0-rc.4", default-features = false, features = ["aes", "alloc"] }
anyhow = "1.0.102"
argon2 = "0.5.3"
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
async-walkdir = "2.1.0"
axum = { version = "0.8.9", features = ["json","macros"] }
base64 = "0.22.1"
futures-util = "0.3.32"
hex = "0.4.3"
rand = "0.10.1"
redact = { version = "0.1.11", features = ["serde"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "tls-native-tls", "time"] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full", "macros"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.11", features = ["add-extension", "trace", "limit", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full", "macros"] }
sqlx = { version = "0.9.0", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "time"] }
